--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Prashant Soni</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
@@ -12,9 +12,9 @@
 <img src="img_la.jpg" alt="LA" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ <h1>About Me</h1>
+ <p>My Self Prashant Soni</p>
+ <p>Education:</p>
 </div>
 
 </body>
