--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="img_la.jpg" alt="LA" style="width:100%">
+<img src="img_la.jpg" alt="DS" style="width:100%">
 
 <div class="">
  <h1>About Me</h1>
